--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BadApple</title>
     <link rel="stylesheet" href="./src/assets/style.css" />
   </head>
   <body>
-    <div id="root">
-      <button class="button hidden">replay</button>
-    </div>
+    <div id="root"></div>
     <script src="./src/assets/jszip.min.js"></script>
     <script src="./src/index.js"></script>
   </body>
